# liber

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
app/: __init__.py  main.py
app/agents/: candidate_retriever.py  explanation_generator.py  orchestrator.py  taste_profiler.py
app/api/: routes.py
app/core/: config.py  logging.py  metrics.py
app/db/: models.py  session.py
app/models/: schemas.py
app/scrapers/: reviews.py
app/services/: cache.py  embedding.py  metadata.py
scripts/: seed.py
tests/: test_schemas.py
